2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: change "the $PATH" to "the $PATH environment
	variable".
	http://lists.freedesktop.org/archives/xdg/2007-March/009552.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: improve the description of the Comment key.
	http://lists.freedesktop.org/archives/xdg/2007-March/009440.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: a desktop file of type Application should
	always have an Exec key. Same for Link Type and URL key.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: desktop files of type Directory have a
	.directory extension right now (at least in GNOME), but according to
	the spec, this is wrong. The patch fixes this. Also, it removes a
	small part of text explaining the name of a desktop file describing a
	directory.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml:clarify a bit the text about keys that only
	makes sense in a specific context. Also, state that the keys should
	not be used outside of this context. For example, the URL key should
	not be present if the type is not Link.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: small typo
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: this changes the type of the version from
	numeric to string. It's needed if we consider the possibility that
	there are some desktop entry files out there using 0.9.x as a value
	for this key. The change doesn't break anything.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>
